<resources>
    <string name="app_name">DipIN</string>
    <string name="intent_position_detail">item_position</string>

    <string name="heart_empty_path">M32.95,19 C31.036,19 29.199,19.8828338 28,21.2724796 C26.801,19.8828338 24.964,19 23.05,19 C19.6565,19 17,21.6321526 17,24.9945504 C17,29.1089918 20.74,32.4713896 26.405,37.5667575 L28,39 L29.595,37.5667575 C35.26,32.4713896 39,29.1089918 39,24.9945504 C39,21.6321526 36.3435,19 32.95,19 L32.95,19 Z M28.1155,35.9536785 L28,36.0572207 L27.8845,35.9536785 C22.654,31.2506812 19.2,28.1444142 19.2,24.9945504 C19.2,22.8201635 20.8555,21.1798365 23.05,21.1798365 C24.744,21.1798365 26.394,22.2643052 26.9715,23.7520436 L29.023,23.7520436 C29.606,22.2643052 31.256,21.1798365 32.95,21.1798365 C35.1445,21.1798365 36.8,22.8201635 36.8,24.9945504 C36.8,28.1444142 33.346,31.2506812 28.1155,35.9536785 L28.1155,35.9536785 Z</string>
    <string name="heart_full_path">M28,39 L26.405,37.5667575 C20.74,32.4713896 17,29.1089918 17,24.9945504 C17,21.6321526 19.6565,19 23.05,19 C24.964,19 26.801,19.8828338 28,21.2724796 C29.199,19.8828338 31.036,19 32.95,19 C36.3435,19 39,21.6321526 39,24.9945504 C39,29.1089918 35.26,32.4713896 29.595,37.5667575 L28,39 L28,39 Z</string>
    <string name="heart_clip_hidden">M18 37 L38 37 L38 37 L18 37 Z</string>
    <string name="heart_clip_shown">M0 0 L56 0 L56 56 L0 56 Z</string>
    <string name="share_news">Check Out! \n %1$s \n\n Find out more at %2$s</string>
    <string name="time_hours">%1$s hours ago</string>
    <string name="time_minutes">%1$s hours ago</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>


    <string name="pref_shared_platform">sharedNews</string>
    <string name="pref_shared_website">sharedWebsite</string>

    <string name="Al_Jazeera_English">Al Jazeera English</string>
    <string name="Associated_Press">Associated Press</string>
    <string name="BBC_News">BBC News</string>
    <string name="BBC_Sport">BBC Sport</string>
    <string name="Bloomberg">Bloomberg</string>
    <string name="Breitbart_News">Breitbart News</string>
    <string name="Business_Insider">Business Insider</string>
    <string name="Business_Insider_UK">Business Insider UK</string>
    <string name="Buzzfeed">Buzzfeed</string>
    <string name="CNBC">CNBC</string>
    <string name="CNN">CNN</string>
    <string name="Die_Zeit">Die Zeit</string>
    <string name="Engadget">Engadget</string>
    <string name="Entertainment_Weekly">Entertainment Weekly</string>
    <string name="ESPN">ESPN</string>
    <string name="ESPN_Cric_Info">ESPN Cric Info</string>
    <string name="Financial_Times">Financial Times</string>
    <string name="Fortune">Fortune</string>
    <string name="FourFourTwo">Four Four Two</string>
    <string name="Fox_Sports">Fox Sports</string>
    <string name="Google_News">Google News</string>
    <string name="Gruenderszene">Gruenderszene</string>
    <string name="Hacker_News">Hacker News</string>
    <string name="Independent">Independent</string>
    <string name="Mashable">Mashable</string>
    <string name="Metro">Metro</string>
    <string name="Mirror">Mirror</string>
    <string name="MTV_News">MTV News</string>
    <string name="MTV_News_UK">MTV News UK</string>
    <string name="National_Geographic">National Geographic</string>
    <string name="New_Scientist">New Scientist</string>
    <string name="Newsweek">Newsweek</string>
    <string name="New_York_Magazine">New York Magazine</string>
    <string name="Polygon">Polygon</string>
    <string name="Recode">Recode</string>
    <string name="TalkSport">TalkSport</string>
    <string name="TechCrunch">TechCrunch</string>
    <string name="TechRadar">TechRadar</string>
    <string name="The_Economist">The Economist</string>
    <string name="The_Guardian_AU">The Guardian AU</string>
    <string name="The_Guardian_UK">The Guardian UK</string>
    <string name="The_Hindu">The Hindu</string>
    <string name="The_Huffington_Post">The Huffington Post</string>
    <string name="The_Lad_Bible">The Lad Bible</string>
    <string name="The_New_York_Times">The New York Times</string>
    <string name="The_Next_Web">The Next Web</string>
    <string name="The_Sport_Bible">The Sport Bible</string>
    <string name="The_Telegraph">The Telegraph</string>
    <string name="The_Times_of_India">The Times of India</string>
    <string name="The_Verge">The Verge</string>
    <string name="Time">Time</string>

    <string name="content_headline">headline</string>
    <string name="content_date">date</string>
    <string name="content_read_more">read more</string>
    <string name="content_headline_image">headline image</string>
    <string name="content_favorite">favorite</string>
    <string name="content_share">Share</string>
    <string name="content_source_image">source image</string>
    <string name="content_source_title">source title</string>
    <string name="menu_item">Menu Item</string>
    <string name="read_more">Read More</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_platform">Platforms</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_rate_us">Rate Us</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_share_app">Share App</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_settings">Settings</string>
    <string name="article_share">Share with...</string>
    <string name="login_to_continue">Please login to continue</string>

    <string name="no_connection">No Internet Connection</string>

    <string name="main_ad_unit_id">ca-app-pub-1205687093418675/6000748830</string>
    <string name="fav_ad_unit_id">ca-app-pub-1205687093418675/1920713655</string>
    <string name="detail_ad_unit_id">ca-app-pub-1205687093418675/8314665371</string>

    <string name="facebook_application_id" translatable="false">1392098020826878</string>

    <string name="topic_general">General</string>
    <string name="topic_sports">Sports</string>
    <string name="topic_entertainment">Entertainment</string>
    <string name="topic_business">Business</string>
    <string name="topic_technology">Technology</string>
    <string name="topic_music">Music</string>
    <string name="topic_science_nature">Science and Nature</string>
    <string name="topic_gaming">Gaming</string>

</resources>
