<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/appwidget_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_headline_image"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/photo_protection"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/content_headline"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:textStyle="bold|italic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:contentDescription="@string/content_date"
            android:id="@+id/appwidget_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:textColor="#FAFAFA"
            android:textSize="12sp"
            android:textStyle="bold"/>

            <TextView
                android:id="@+id/appwidget_read_more"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_read_more"
                android:text="@string/read_more"
                android:textColor="#FAFAFA"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>