<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fav_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fav_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_headline_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/fav_text_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/detail_inner_horiz_margin"
        android:paddingRight="@dimen/detail_inner_horiz_margin">

        <TextView
            android:id="@+id/fav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_headline"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingMultiplier="0.9"
            android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
            android:textColor="#999"
            android:textSize="@dimen/detail_title_text_size"
            android:textStyle="bold" />

        <View
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8fff" />

        <TextView
            android:id="@+id/fav_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_date"
            android:textColor="#999"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fav_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fav_url_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/content_read_more"
            android:gravity="center"
            android:src="@drawable/ic_link_white" />

        <ImageView
            android:id="@+id/fav_bookmark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/content_favorite"
            android:src="@drawable/ic_bookmark" />

        <ImageView
            android:id="@+id/fav_share_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/content_share"
            android:src="@android:drawable/ic_menu_share" />

    </LinearLayout>
</FrameLayout>