<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_headline_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="4dp"
            android:paddingLeft="@dimen/detail_inner_horiz_margin"
            android:paddingRight="@dimen/detail_inner_horiz_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingMultiplier="0.9"
                android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                android:textColor="#fff"
                android:textSize="@dimen/detail_title_text_size"
                android:textStyle="bold"
                android:contentDescription="@string/content_headline"/>

            <View
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#8fff" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:contentDescription="@string/content_date"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/url_news"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:src="@drawable/ic_link_white"
                android:contentDescription="@string/content_read_more"/>

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/ic_bookmark"
                android:contentDescription="@string/content_favorite"/>

            <ImageView
                android:id="@+id/share_news"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_share"
                android:contentDescription="@string/content_share"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
